re PR tree-optimization/27093 (verify_ssa failed: definition does not dominate use)

2006-05-08  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/27093
	* tree-ssa-alias.c (recalculate_used_alone): Mark variables for 
	renaming when they become not-used_alone.

From-SVN: r113641